-footer x-overflow fix on mobile -connect some script -little corrections

--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -56,6 +56,10 @@ body {
 
 	@include scrollbars(10px, #28282a33, transparent);
 
+	&.menu-opened {
+		overflow: hidden;
+	}
+
 }
 
 body input, body textarea {
